# mammotion_manager

./: .env.example  .gitignore  INSTALL_FEDORA.md  LICENSE  PYMAMMOTION_PERFECT_INTEGRATION.md  QUICK_START.md  README.md  START_HERE.md  fix_high_dpi_text.py  fix_login_layout.py  fix_qt6_compatibility.py  install_fedora.sh  main.py  main_web.py  perfect_integration_results.txt  pyproject.toml  real_api_web_gui.py  real_mammotion_api_v2.py  standalone_web_gui.py  test_architecture.py  test_gui_components.py  test_pymammotion_integration.py  test_pymammotion_perfect.py  test_real_api.py  test_web_gui_only.py  web_gui_real_api_final.py
mammotion-web-complete/: .env.example  QUICKSTART.md  README.md  check_pymammotion_examples.py  debug_pymammotion.py  investigate_auth_methods.py  investigate_mammotion_http.py  requirements.txt  setup.py  start_server.bat  start_server.sh  test_auth_simple.py  test_auth_with_country_code.py  test_login_params.py
mammotion-web-complete/src/mammotion_web/: __init__.py  app.py  config.py
mammotion-web-local/: README.md  requirements.txt
mammotion-web-local/src/mammotion_web/: __init__.py  app.py  config.py
src/: __init__.py
src/controllers/: __init__.py  main_controller.py
src/mammotion_web/: app.py  cli.py  logging_conf.py  main.py
src/mammotion_web/api/: __init__.py  device_manager.py  (+2 more)
src/models/: __init__.py  mammotion_model.py  real_mammotion_api.py  real_mammotion_client.py
src/utils/: __init__.py  logging_config.py
src/views/: __init__.py  app.py  login_window.py  login_window.py.backup2  login_window_old2.py  login_window_old3.py  main_window.py  tkinter_login_window.py  web_gui.py
systemd/: mammotion-web.service
(+42 files in other folders)
